Converted receive container to java server and updated to use shell scripts